--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "npx eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "pre-commit": [
+    "lint"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -19,5 +22,8 @@
     "moment": "^2.25.3",
     "moment-timezone": "^0.5.28",
     "winston": "^3.2.1"
+  },
+  "devDependencies": {
+    "pre-commit": "^1.2.2"
   }
 }
