--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.15",
     "moment": "^2.25.3",
     "moment-timezone": "^0.5.28",
+    "node-emoji": "^1.10.0",
     "nodemon": "^2.0.3",
     "sentiment": "^5.0.2",
     "winston": "^3.2.1"
