--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "bottokun",
   "version": "0.1.0",
   "description": "botto-kun bot repo for discord",
-  "main": "index.js",
+  "main": "bot.js",
   "scripts": {
-    "start": "BOT_ENV=PRODUCTION node new.js",
-    "dev": "BOT_ENV=DEVELOPMENT nodemon --inspect new.js",
+    "start": "BOT_ENV=PRODUCTION node bot.js",
+    "dev": "BOT_ENV=DEVELOPMENT nodemon --inspect bot.js",
     "lint": "npx eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
